--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/barcode-scanner": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/speech-recognition": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.1",
     "ngx-qrcode2": "0.0.9",
