--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/barcode-scanner": "^5.19.1",
+    "@ionic-native/camera": "^5.20.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/speech-recognition": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.1",
@@ -77,7 +79,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "ios"
