--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@ionic-native/barcode-scanner": "^5.19.1",
     "@ionic-native/camera": "^5.20.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/device-motion": "^5.23.0",
+    "@ionic-native/file": "^5.23.0",
+    "@ionic-native/http": "^5.23.0",
     "@ionic-native/speech-recognition": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.1",
@@ -80,7 +86,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "phonegap-plugin-barcodescanner": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios"
